# prax-secrets-proxy

./: .env-example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
scripts/: gen-cert.sh  gen-token.sh
secrets_proxy/: __init__.py  __main__.py  _healthcheck.py  app.py  config.py  forward_inject.py  mitm_addon.py
tests/: test_forward_inject.py  test_secrets_proxy.py
