[project]
name = "prax-secrets-proxy"
version = "0.1.0"
description = "A credential-injecting egress proxy so an agent runs KEYLESS — the proxy holds the real API keys, injects them, and streams responses back."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
prod = ["gunicorn>=21.0"]
# The FORWARD (transparent MITM egress) proxy — proxies ALL of Prax's egress, not
# just the model APIs. Heavy dep, so it's opt-in; only needed for forward mode.
forward = ["mitmproxy>=11.0"]

[project.scripts]
prax-secrets-proxy = "secrets_proxy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["secrets_proxy"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "BLE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
